# caveman-code

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  install.ps1  install.sh  llms.txt  package-lock.json  package.json  test.sh  tsconfig.json
.cave/extensions/: diff.ts  files.ts  prompt-url-widget.ts  redraws.ts
.github/ISSUE_TEMPLATE/: contribution.yml
.github/workflows/: build-binaries.yml
.pi/prompts/: cl.md  pr.md
Formula/: cave.rb
context/: CLAUDE.md
context/blueprints/: CLAUDE.md  blueprint-overview.md
context/branding/: ascii-logo-concepts.md
context/designs/: CLAUDE.md
context/impl/: CLAUDE.md  T-te-083.md  T-te-084.md  T-te-085.md  T-te-086.md  T-te-087.md  T-te-088.md  T-te-089.md  T-te-090.md  T-te-091.md  T-te-092.md  impl-overview.md
context/kits/: CLAUDE.md
context/notes/: agent-loop-walkthrough.md
context/plans/: CLAUDE.md  cave-v2-best-in-class.md  plan-overview.md  ui-hermes-parity.md
context/refs/: CLAUDE.md
docs/: api.md  cookbook.md  index.md  package.json  troubleshooting.md
docs/getting-started/: installation.md  quickstart.md
docs/migration/: from-aider.md  from-claude-code.md  from-codex.md
docs/reference/: daemon.md  mcp.md  plan-mode.md
installers/: install.sh
registry/: registry.json
research/: README.md
research/evals/: run-compare.ts  run-microbench.ts  run-terminal-bench.ts
research/evals/terminal-bench/cave-tb-agent/: Dockerfile  README.md  agent.py  pyproject.toml
scripts/: browser-smoke-entry.ts  build-binaries.sh  check-browser-smoke.mjs  sync-versions.js
(+14 files in other folders)
